tests/good/reassign_after_move.mu
let mut x = 0
let mut y = x
x = 1