tests/bad/dec_after_partial_move.mu
let mut x = box box 1
let mut y = *x
let mut z = x